# windsurf-ai-utils

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
core/: __init__.py  config.py  security.py
docs/services/clickhouse/: AI_GUIDELINES.md
docs/services/dbt/: AI_GUIDELINES.md
docs/services/miro/: README.md
services/clickhouse/: client.py
services/miro/: client.py
services/stripe/: client.py
src/windsurf_ai_utils/: __init__.py
src/windsurf_ai_utils/core/: config.py  validation.py
src/windsurf_ai_utils/services/clickhouse/: client.py
src/windsurf_ai_utils/services/miro/: client.py
src/windsurf_ai_utils/services/stripe/: client.py
tests/core/: test_validation.py
tests/services/miro/: test_client.py
tests/services/stripe/: test_client.py
